Add results for finetuning fashion-MNIST and update README.md

--- a/ImageClassifier2.ipynb
+++ b/ImageClassifier2.ipynb
@@ -38,7 +38,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "# Definirea mediului pe care va rula codul de antrenare\n",
+    "# Check if GPU is available.\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "print(f'Running code @ {device}')\n",
@@ -78,15 +78,15 @@
     "id": "EmjogSWJ-Xlt"
    },
    "source": [
-    "#### Descărcare și preparare date\n",
+    "#### Data Preparation\n",
     "\n",
-    "* **Fashion-MNIST** este echivalentul MNIST pentru imagini vestimentare grey\n",
+    "* **Fashion-MNIST** is the equivalent of MNIST dataset for gray images with clothing items. \n",
     "\n",
-    "* cuprinde 60k imagini din 10 clase: T-shirt, Trouser, Pullover, Dress, Coat, Sandal, Shirt, Sneaker, Bag, Ankle boot\n",
+    "* it contains 60k images made of 10 classes: T-shirt, Trouser, Pullover, Dress, Coat, Sandal, Shirt, Sneaker, Bag, Ankle boot\n",
     "\n",
     "* train: 60k; test: 10k\n",
     "\n",
-    "* Fiecare imagine are cate 16 atribute extrase folosind algoritmul HOG, PCA si Selection 80%\n"
+    "* every image has 16 attributes extracted using first HOG, then PCA over it with 20PC, and last a selector with 80%\n"
    ]
   },
   {
@@ -180,8 +180,7 @@
     "id": "4vMPjp0UU4Mx"
    },
    "source": [
-    "#### Afișare imagini\n",
-    "Implementarea unei „galerii” de imagini pentru vizualizarea setului de date."
+    "#### Visualize Images"
    ]
   },
   {
@@ -259,9 +258,7 @@
     "id": "9pgKO2uEU_tn"
    },
    "source": [
-    "#### Pregătirea datelor pentru antrenare și testare\n",
-    "* pentru antrenare folosim optimizatori stocastici (e.g. SGD, Adam), asa că trebuie sa putem eșantiona exemple aleatoare din setul de date pentru a forma mini-batch-uri\n",
-    "* pentru testare iterăm în mod secvențial prin setul de date"
+    "#### Prepare Data"
    ]
   },
   {
@@ -346,9 +343,9 @@
     "id": "6WHWlDznN-cs"
    },
    "source": [
-    "#### Definire MLP\n",
+    "#### Define MLP\n",
     "\n",
-    "Vom defini un model de tip MLP cu activari ReLU:\n",
+    "Architecture:\n",
     "  * FC(16, 256) + ReLU\n",
     "  * FC(256, 256) + ReLU\n",
     "  * FC(256, 10)"
@@ -384,7 +381,7 @@
     "id": "117ebPugarCO"
    },
    "source": [
-    "##### Initializarea modelului rețelei și funcții auxiliare pentru inspectarea modelului definit"
+    "#### Define Model and Evaluation Functions"
    ]
   },
   {
@@ -512,7 +509,7 @@
     "id": "NTOU1m83NVKb"
    },
    "source": [
-    "##### 4.2 Parametrizarea optimizatorului"
+    "##### Define Optimizer"
    ]
   },
   {
@@ -556,7 +553,7 @@
     "id": "HqnmUI9FNVKc"
    },
    "source": [
-    "##### Afișarea loss-ului"
+    "##### Accuracy and Loss Plotting"
    ]
   },
   {
@@ -648,7 +645,7 @@
     "id": "JQBpZRP-TKI0"
    },
    "source": [
-    "#### Parametrizarea iterațiilor de antrenare, raportare și testare"
+    "##### Define Training Parameters"
    ]
   },
   {
@@ -673,7 +670,7 @@
     "id": "6ARGcbSGTFDN"
    },
    "source": [
-    "#### Antrenarea modelului si Evaluare"
+    "#### Train and Evaluate Model"
    ]
   },
   {
@@ -993,7 +990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pregatire Date"
+    "#### Load Data"
    ]
   },
   {
@@ -1105,7 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Definirea Modelului"
+    "#### Define Model and Optimizer"
    ]
   },
   {
@@ -1155,13 +1152,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Definire optimizatori"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
@@ -1186,7 +1176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Antrenare si Evaluare"
+    "#### Train and Evaluate"
    ]
   },
   {
@@ -1378,7 +1368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pregatire Date"
+    "#### Load Data"
    ]
   },
   {
@@ -1499,7 +1489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define DeepConvNt Architecture"
+    "#### Define DeepConvNet Architecture"
    ]
   },
   {
@@ -1527,7 +1517,7 @@
     "            nn.LeakyReLU(negative_slope=0.01, inplace=False),\n",
     "            nn.Linear(in_features=120, out_features=10)\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.classifier(self.feature(x))"
    ]
@@ -1619,7 +1609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train and Evaluate Model"
+    "#### Train and Evaluate"
    ]
   },
   {
@@ -1815,13 +1805,6 @@
    "source": [
     "train_lenet(60000, 256, train_loader=train_loader, test_loader=test_loader,\n",
     "         net=net, lr_scheduler=lr_scheduler, optimizer=optimizer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Evaluate Model Perfermance"
    ]
   },
   {
@@ -2268,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -2331,22 +2314,58 @@
       "val Loss: 0.2384 Acc: 0.9305\n",
       "\n",
       "Epoch 11/19\n",
-      "----------\n"
+      "----------\n",
+      "train Loss: 0.0463 Acc: 0.9873\n",
+      "val Loss: 0.2487 Acc: 0.9298\n",
+      "\n",
+      "Epoch 12/19\n",
+      "----------\n",
+      "train Loss: 0.0394 Acc: 0.9888\n",
+      "val Loss: 0.2699 Acc: 0.9266\n",
+      "\n",
+      "Epoch 13/19\n",
+      "----------\n",
+      "train Loss: 0.0359 Acc: 0.9902\n",
+      "val Loss: 0.2607 Acc: 0.9278\n",
+      "\n",
+      "Epoch 14/19\n",
+      "----------\n",
+      "train Loss: 0.0294 Acc: 0.9921\n",
+      "val Loss: 0.2574 Acc: 0.9351\n",
+      "\n",
+      "Epoch 15/19\n",
+      "----------\n",
+      "train Loss: 0.0246 Acc: 0.9933\n",
+      "val Loss: 0.2845 Acc: 0.9313\n",
+      "\n",
+      "Epoch 16/19\n",
+      "----------\n",
+      "train Loss: 0.0237 Acc: 0.9937\n",
+      "val Loss: 0.2756 Acc: 0.9336\n",
+      "\n",
+      "Epoch 17/19\n",
+      "----------\n",
+      "train Loss: 0.0233 Acc: 0.9935\n",
+      "val Loss: 0.3101 Acc: 0.9280\n",
+      "\n",
+      "Epoch 18/19\n",
+      "----------\n",
+      "train Loss: 0.0240 Acc: 0.9932\n",
+      "val Loss: 0.2869 Acc: 0.9307\n",
+      "\n",
+      "Epoch 19/19\n",
+      "----------\n",
+      "train Loss: 0.0155 Acc: 0.9963\n",
+      "val Loss: 0.2698 Acc: 0.9373\n",
+      "\n",
+      "Training complete in 127m 39s\n",
+      "Best val Acc: 0.938000\n"
      ]
     }
    ],
    "source": [
     "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
     "                       num_epochs=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualize_model(model_ft)"
    ]
   },
   {
@@ -2414,7 +2433,15 @@
     "id": "yDEaAAT4bFNy"
    },
    "source": [
-    "## Fruits-360"
+    "## Fruits-360\n",
+    "\n",
+    "* **Fruits-360** is a dataset containing classes of fruits, vegetables, and nuts\n",
+    "\n",
+    "* it contains 95k images made of 70 classes\n",
+    "\n",
+    "* train: 71k; test: 24k\n",
+    "\n",
+    "* every image has 70 attributes extracted using PCA with 70PC"
    ]
   },
   {
